--- a/config.json
+++ b/config.json
@@ -1,18 +1,24 @@
 {
     "project": {
-        "name": "mybgg",
-        "title": ""
+        "name": "mybgg",  // This is the name of your project. You can leave it as it is.
+        "hiyougame": ""  // This is the page title. If you leave this empty, a title will be
+                     // created from your BGG username.
     },
     "boardgamegeek": {
-        "user_name": "YOUR_BGG_USERNAME",
+        "user_name": "hiyou",  // The username on boardgamegeek that has your games
         "extra_params": {
-            "own": 1
+            "own": 1  // Here's the query that will be sent to BGG to get your games. A full list
+                      // of options can be found here:
+                      // https://lcosmin.github.io/boardgamegeek/modules.html#boardgamegeek.api.BGGClient.collection
         }
     },
     "algolia": {
-        "app_id": "YOUR_APP_ID",
-        "api_key_search_only": "YOUR_PUBLIC_API_KEY",
-        "index_name": "YOUR_INDEX_NAME",
-        "hits_per_page": 24
+        "app_id": "DO83KZB9UQ",  // Your Algolia APP ID. When logged in, look at the top of the
+                                  // page which says: APPS > YOUR_ID_HERE
+        "api_key_search_only": "6e8acd694b0da3c6a58b7579ecb43ae7",  // Click "API Keys" in the menu to the left.
+                                                       // Use the "Search-Only API Key"!
+        "index_name": "bgghiyou"  // All your games will be stored in something called an "index".
+                                         // You can create and index by going to "Indices" in the menu to the left.
+                                         // Click to create a new index, and give it a name. Put the name you choose here.
     }
 }
